--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
-djangorestframework = "*"
 pyjwt = "*"
 django-cors-headers = "*"
+django-filter = "*"
+django = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.6"
